[gd_scene load_steps=2 format=3 uid="uid://c8m4x0q0x8q1a"]

[ext_resource type="Script" path="res://scenes/ui/screens/builder_screen.gd" id="1_jkl78"]

[node name="BuilderScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkl78")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1.0)

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="TitleLabel" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Bot Builder"
horizontal_alignment = 1

[node name="DeployButton" type="Button" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Deploy"

[node name="MainGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ShopPanel" type="PanelContainer" parent="MainGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="ShopPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="ShopPanel/VBox"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1

[node name="ShopCategoryDropdown" type="OptionButton" parent="ShopPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ShopList" type="ItemList" parent="ShopPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryPanel" type="PanelContainer" parent="MainGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryPanel/VBox"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="InventoryFilter" type="OptionButton" parent="InventoryPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryList" type="ItemList" parent="InventoryPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="BotsPanel" type="PanelContainer" parent="MainGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="BotsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="BotsPanel/VBox"]
layout_mode = 2
text = "Your Bots"
horizontal_alignment = 1

[node name="BotsContainer" type="VBoxContainer" parent="BotsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionPanel" type="PanelContainer" parent="MainGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="DescriptionPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DescriptionPanel/VBox"]
layout_mode = 2
text = "Item Details"
horizontal_alignment = 1

[node name="ItemIcon" type="TextureRect" parent="DescriptionPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 5
stretch_mode = 5

[node name="ItemNameLabel" type="Label" parent="DescriptionPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="ItemStatsLabel" type="Label" parent="DescriptionPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemDescriptionLabel" type="Label" parent="DescriptionPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3

[node name="ManufacturerLabel" type="Label" parent="DescriptionPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="ActionsPanel" type="PanelContainer" parent="MainGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="ActionsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="ActionsPanel/VBox"]
layout_mode = 2
text = "Actions"
horizontal_alignment = 1

[node name="MountButton" type="Button" parent="ActionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Mount"

[node name="UnmountButton" type="Button" parent="ActionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Unmount"

[node name="EnableButton" type="Button" parent="ActionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable"

[node name="DisableButton" type="Button" parent="ActionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Disable"

[node name="TeamColorPicker" type="ColorPickerButton" parent="ActionsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Team Color"
color = Color(0.8, 0.2, 0.2, 1)

[node name="StatsContainer" type="VBoxContainer" parent="ActionsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="WeightLabel" type="Label" parent="ActionsPanel/VBox/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Weight: 0"

[node name="DPSLabel" type="Label" parent="ActionsPanel/VBox/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DPS: 0"
